fix spacing agian

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ p{
     padding: 30px;
 }
 body {
-    text-align: center;
+    text-align: left;
     background: lightblue;
     color: white;
     font-family: Helvetica;
